--- a/index.html
+++ b/index.html
@@ -60,22 +60,22 @@
       <section>
         <h2>Our Team</h2>
         <section>
-          <img src="images/img-3.png" alt="men" width="264" height="260" />
+          <img src="images/img-3.jpg" alt="men" width="264" height="260" />
           <h3>Mark Guerrero</h3>
           <p>Product Designer</p>
         </section>
         <section>
-          <img src="images/img-2.png" alt="men" width="264" height="260" />
+          <img src="images/img-2.jpg" alt="men" width="264" height="260" />
           <h3>Tom Ford</h3>
           <p>Product Designer</p>
         </section>
         <section>
-          <img src="images/img-1.png" alt="men" width="264" height="260" />
+          <img src="images/img-1.jpg" alt="men" width="264" height="260" />
           <h3>Camila Garcia</h3>
           <p>Marketing</p>
         </section>
         <section>
-          <img src="images/img.png" alt="men" width="264" height="260" />
+          <img src="images/img.jpg" alt="men" width="264" height="260" />
           <h3>Daniel Wilson</h3>
           <p>UI Designer</p>
         </section>
