--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav>
-        <a href="">WEBSTUDIO</a>
+        <a href="./index.html">WEBSTUDIO</a>
         <ul>
           <li><a href="#studio">Studio</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
@@ -18,7 +18,7 @@
       </nav>
       <address>
         <ul>
-          <li><a href="mail:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
@@ -29,57 +29,62 @@
         <button type="button">Order Service</button>
       </section>
       <section>
-        <section>
-          <h3>Strategy</h3>
-          <p>
-            Our goal is to identify the business problem to walk away with the
-            perfect and creative solution.
-          </p>
-        </section>
-        <section>
-          <h3>Punctuality</h3>
-          <p>
-            Bring the key message to the brand's audience for the best price
-            within the shortest possible time.
-          </p>
-        </section>
-        <section>
-          <h3>Diligence</h3>
-          <p>
-            Research and confirm brands that present the strongest digital
-            growth opportunities and minimize risk.
-          </p>
-        </section>
-        <section>
-          <h3>Technologies</h3>
-          <p>
-            Design practice focused on digital experiences. We bring forth a
-            deep passion for problem-solving.
-          </p>
-        </section>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          >
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
       </section>
       <section>
         <h2>Our Team</h2>
-        <section>
-          <img src="images/img-3.jpg" alt="men" width="264" height="260" />
-          <h3>Mark Guerrero</h3>
-          <p>Product Designer</p>
-        </section>
-        <section>
-          <img src="images/img-2.jpg" alt="men" width="264" height="260" />
-          <h3>Tom Ford</h3>
-          <p>Product Designer</p>
-        </section>
-        <section>
-          <img src="images/img-1.jpg" alt="men" width="264" height="260" />
-          <h3>Camila Garcia</h3>
-          <p>Marketing</p>
-        </section>
-        <section>
-          <img src="images/img.jpg" alt="men" width="264" height="260" />
-          <h3>Daniel Wilson</h3>
-          <p>UI Designer</p>
-        </section>
+        <ul>
+          <li>
+            <img src="images/img-3.jpg" alt="men" width="264" height="260" />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="images/img-2.jpg" alt="men" width="264" height="260" />
+            <h3>Tom Ford</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="images/img-1.jpg" alt="men" width="264" height="260" />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="images/img.jpg" alt="men" width="264" height="260" />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
       </section>
     </main>
     <footer>
