--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <header>
+      <a href="./index.html">WEBSTUDIO</a>
       <nav>
-        <a href="./index.html">WEBSTUDIO</a>
         <ul>
           <li><a href="#studio">Studio</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
@@ -65,22 +65,22 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="images/img-3.jpg" alt="men" width="264" height="260" />
+            <img src="./images/img-3.jpg" alt="men" width="264" height="260" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="images/img-2.jpg" alt="men" width="264" height="260" />
+            <img src="./images/img-2.jpg" alt="men" width="264" height="260" />
             <h3>Tom Ford</h3>
-            <p>Product Designer</p>
+            <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="images/img-1.jpg" alt="men" width="264" height="260" />
+            <img src="./images/img-1.jpg" alt="men" width="264" height="260" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="images/img.jpg" alt="men" width="264" height="260" />
+            <img src="./images/img.jpg" alt="men" width="264" height="260" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
@@ -88,7 +88,7 @@
       </section>
     </main>
     <footer>
-      <a href="#logo">WEBSTUDIO</a>
+      <a href="./index.html">WEBSTUDIO</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
