--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html">WEBSTUDIO</a>
+        <dev>
+          <a href="./index.html">WEBSTUDIO</a>
+        </dev>
         <ul>
           <li><a href="#studio">Studio</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
@@ -58,32 +60,36 @@
           </p>
         </li>
       </ul>
-      <h2>Our Team</h2>
-      <ul>
-        <li>
-          <img src="./images/img-3.jpg" alt="men" width="264" height="260" />
-          <h3>Mark Guerrero</h3>
-          <p>Product Designer</p>
-        </li>
-        <li>
-          <img src="./images/img-2.jpg" alt="men" width="264" height="260" />
-          <h3>Tom Ford</h3>
-          <p>Frontend Developer</p>
-        </li>
-        <li>
-          <img src="./images/img-1.jpg" alt="men" width="264" height="260" />
-          <h3>Camila Garcia</h3>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img src="./images/img.jpg" alt="men" width="264" height="260" />
-          <h3>Daniel Wilson</h3>
-          <p>UI Designer</p>
-        </li>
-      </ul>
+      <section>
+        <h2>Our Team</h2>
+        <ul>
+          <li>
+            <img src="./images/img-3.jpg" alt="men" width="264" height="260" />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="./images/img-2.jpg" alt="men" width="264" height="260" />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img src="./images/img-1.jpg" alt="men" width="264" height="260" />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/img.jpg" alt="men" width="264" height="260" />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer>
-      <a href="./index.html">WEBSTUDIO</a>
+      <dev>
+        <a href="./index.html">WEBSTUDIO</a>
+      </dev>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
