--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
       </address>
     </header>
     <main>
-      <section>
+      <section class="home-page">
         <h1 id="logo">Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
-      <section>
+      <section class="description">
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -60,7 +60,7 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="our-team">
         <h2>Our Team</h2>
         <ul>
           <li>
