--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WEBSTUDIO</title>
-    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a class="logo" href="./index.html">WEBSTUDIO</a>
+        <a href="./index.html">WEBSTUDIO</a>
         <ul>
           <li><a href="#studio">Studio</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
@@ -27,6 +26,7 @@
       <h1 id="logo">Effective Solutions for Your Business</h1>
       <button type="button">Order Service</button>
       <section class="description">
+        <h2>Description</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -85,7 +85,7 @@
       </section>
     </main>
     <footer>
-      <a class="logo" href="./index.html">WEBSTUDIO</a>
+      <a href="./index.html">WEBSTUDIO</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
