--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html">WEBSTUDIO</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
-          <li><a href="#studio">Studio</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#contacts">Contacts</a></li>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
         </ul>
       </nav>
       <address>
@@ -23,10 +23,12 @@
       </address>
     </header>
     <main>
-      <h1 id="logo">Effective Solutions for Your Business</h1>
-      <button type="button">Order Service</button>
-      <section class="description">
-        <h2>Description</h2>
+      <section>
+        <h1 id="logo">Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
+      <section>
+        <h2>Advantage</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -85,7 +87,7 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html">WEBSTUDIO</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
