--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <button type="button">Order Service</button>
       </section>
       <section>
-        <h2>Advantage</h2>
+        <h2>Advantage and style</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -60,7 +60,7 @@
           </li>
         </ul>
       </section>
-      <section class="our-team">
+      <section>
         <h2>Our Team</h2>
         <ul>
           <li>
