--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
   <body>
     <header class="page-header">
       <nav>
-        <a href="./index.html"><span class="accent">Wed</span>Studio</a>
+        <a class="header-logo" href="./index.html"
+          ><span class="accent">Wed</span>Studio</a
+        >
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
