--- a/index.html
+++ b/index.html
@@ -22,50 +22,58 @@
         <a class="header-logo" href="./index.html"
           ><span class="accent">Wed</span>Studio</a
         >
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+        <ul class="link-page">
+          <li><a class="link" href="">Studio</a></li>
+          <li><a class="link" href="">Portfolio</a></li>
+          <li><a class="link" href="">Contacts</a></li>
         </ul>
       </nav>
       <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <ul class="link-contact">
+          <li>
+            <a class="link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
     <main>
-      <section>
-        <h1 id="logo">Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="ferst-page">
+        <h1 id="logo" class="ferst-title">
+          Effective Solutions for Your Business
+        </h1>
+        <button type="button" class="button-ferst">Order Service</button>
       </section>
-      <section>
-        <h2>Advantage and style</h2>
+      <section class="second-page">
+        <h2 class="second-title">Advantage and style</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
+            <h3 class="third-title">Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
+            <h3 class="third-title">Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
+            <h3 class="third-title">Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
+            <h3 class="third-title">Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -73,33 +81,33 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
+      <section class="third-page">
+        <h2 class="second-title">Our Team</h2>
         <ul>
           <li>
             <img src="./images/img-3.jpg" alt="men" width="264" height="260" />
-            <h3>Mark Guerrero</h3>
+            <h3 class="third-title">Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
             <img src="./images/img-2.jpg" alt="men" width="264" height="260" />
-            <h3>Tom Ford</h3>
+            <h3 class="third-title">Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img src="./images/img-1.jpg" alt="men" width="264" height="260" />
-            <h3>Camila Garcia</h3>
+            <h3 class="third-title">Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img src="./images/img.jpg" alt="men" width="264" height="260" />
-            <h3>Daniel Wilson</h3>
+            <h3 class="third-title">Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
         </ul>
       </section>
       <section>
-        <h2>Our Portfolio</h2>
+        <h2 class="second-title">Our Portfolio</h2>
         <ul>
           <li>
             <img
@@ -108,7 +116,7 @@
               width="360"
               height="300"
             />
-            <h3>Banking App</h3>
+            <h3 class="third-title">Banking App</h3>
             <p>App</p>
           </li>
           <li>
@@ -118,7 +126,7 @@
               width="360"
               height="300"
             />
-            <h3>Cashless Payment</h3>
+            <h3 class="third-title">Cashless Payment</h3>
             <p>Marketing</p>
           </li>
           <li>
@@ -128,7 +136,7 @@
               width="360"
               height="300"
             />
-            <h3>Meditation App</h3>
+            <h3 class="third-title">Meditation App</h3>
             <p>App</p>
           </li>
           <li>
@@ -138,7 +146,7 @@
               width="360"
               height="300"
             />
-            <h3>Taxi Service</h3>
+            <h3 class="third-title">Taxi Service</h3>
             <p>Marketing</p>
           </li>
           <li>
@@ -148,7 +156,7 @@
               width="360"
               height="300"
             />
-            <h3>Screen Illustrations</h3>
+            <h3 class="third-title">Screen Illustrations</h3>
             <p>Design</p>
           </li>
           <li>
@@ -158,14 +166,14 @@
               width="360"
               height="300"
             />
-            <h3>Online Courses</h3>
+            <h3 class="third-title">Online Courses</h3>
             <p>Marketing</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
+    <footer class="footer">
+      <a href="./index.html"><span class="accent">Wed</span>Studio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
