--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header class="page-header">
@@ -22,21 +26,23 @@
         <a class="header-logo" href="./index.html"
           ><span class="accent">Wed</span>Studio</a
         >
-        <ul class="link-page">
-          <li><a class="link" href="">Studio</a></li>
-          <li><a class="link" href="">Portfolio</a></li>
-          <li><a class="link" href="">Contacts</a></li>
+        <ul>
+          <li><a class="link-page" href="">Studio</a></li>
+          <li><a class="link-page" href="">Portfolio</a></li>
+          <li><a class="link-page" href="">Contacts</a></li>
         </ul>
       </nav>
       <address>
-        <ul class="link-contact">
-          <li>
-            <a class="link" href="mailto:info@devstudio.com"
+        <ul>
+          <li class="contacts">
+            <a class="link-contact" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li>
-            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <li class="contacts">
+            <a class="link-contact" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -52,29 +58,29 @@
         <h2 class="second-title">Advantage and style</h2>
         <ul>
           <li>
-            <h3 class="third-title">Strategy</h3>
-            <p>
+            <h3 class="third-title-left">Strategy</h3>
+            <p class="paragraph-left">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3 class="third-title">Punctuality</h3>
-            <p>
+            <h3 class="third-title-left">Punctuality</h3>
+            <p class="paragraph-left">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3 class="third-title">Diligence</h3>
-            <p>
+            <h3 class="third-title-left">Diligence</h3>
+            <p class="paragraph-left">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3 class="third-title">Technologies</h3>
-            <p>
+            <h3 class="third-title-left">Technologies</h3>
+            <p class="paragraph-left">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -87,22 +93,22 @@
           <li>
             <img src="./images/img-3.jpg" alt="men" width="264" height="260" />
             <h3 class="third-title">Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <p class="paragraph-center">Product Designer</p>
           </li>
           <li>
             <img src="./images/img-2.jpg" alt="men" width="264" height="260" />
             <h3 class="third-title">Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <p class="paragraph-center">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/img-1.jpg" alt="men" width="264" height="260" />
             <h3 class="third-title">Camila Garcia</h3>
-            <p>Marketing</p>
+            <p class="paragraph-center">Marketing</p>
           </li>
           <li>
             <img src="./images/img.jpg" alt="men" width="264" height="260" />
             <h3 class="third-title">Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <p class="paragraph-center">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -116,8 +122,8 @@
               width="360"
               height="300"
             />
-            <h3 class="third-title">Banking App</h3>
-            <p>App</p>
+            <h3 class="third-title-left">Banking App</h3>
+            <p class="paragraph-left">App</p>
           </li>
           <li>
             <img
@@ -126,8 +132,8 @@
               width="360"
               height="300"
             />
-            <h3 class="third-title">Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="third-title-left">Cashless Payment</h3>
+            <p class="paragraph-left">Marketing</p>
           </li>
           <li>
             <img
@@ -136,8 +142,8 @@
               width="360"
               height="300"
             />
-            <h3 class="third-title">Meditation App</h3>
-            <p>App</p>
+            <h3 class="third-title-left">Meditation App</h3>
+            <p class="paragraph-left">App</p>
           </li>
           <li>
             <img
@@ -146,8 +152,8 @@
               width="360"
               height="300"
             />
-            <h3 class="third-title">Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="third-title-left">Taxi Service</h3>
+            <p class="paragraph-left">Marketing</p>
           </li>
           <li>
             <img
@@ -156,8 +162,8 @@
               width="360"
               height="300"
             />
-            <h3 class="third-title">Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="third-title-left">Screen Illustrations</h3>
+            <p class="paragraph-left">Design</p>
           </li>
           <li>
             <img
@@ -166,8 +172,8 @@
               width="360"
               height="300"
             />
-            <h3 class="third-title">Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="third-title-left">Online Courses</h3>
+            <p class="paragraph-left">Marketing</p>
           </li>
         </ul>
       </section>
