--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
     <header class="page-header">
       <nav>
         <a class="header-logo" href="./index.html"
-          ><span class="accent">Wed</span>Studio</a
+          >Wed<span class="accent">Studio</span></a
         >
         <ul>
-          <li><a class="link-page" href="">Studio</a></li>
-          <li><a class="link-page" href="">Portfolio</a></li>
-          <li><a class="link-page" href="">Contacts</a></li>
+          <li><a class="link-page" href="./index.html">Studio</a></li>
+          <li><a class="link-page" href="./index.html">Portfolio</a></li>
+          <li><a class="link-page" href="./index.html">Contacts</a></li>
         </ul>
       </nav>
       <address>
@@ -90,22 +90,22 @@
       <section class="third-page">
         <h2 class="second-title">Our Team</h2>
         <ul>
-          <li>
+          <li class="list">
             <img src="./images/img-3.jpg" alt="men" width="264" height="260" />
             <h3 class="third-title">Mark Guerrero</h3>
             <p class="paragraph-center">Product Designer</p>
           </li>
-          <li>
+          <li class="list">
             <img src="./images/img-2.jpg" alt="men" width="264" height="260" />
             <h3 class="third-title">Tom Ford</h3>
             <p class="paragraph-center">Frontend Developer</p>
           </li>
-          <li>
+          <li class="list">
             <img src="./images/img-1.jpg" alt="men" width="264" height="260" />
             <h3 class="third-title">Camila Garcia</h3>
             <p class="paragraph-center">Marketing</p>
           </li>
-          <li>
+          <li class="list">
             <img src="./images/img.jpg" alt="men" width="264" height="260" />
             <h3 class="third-title">Daniel Wilson</h3>
             <p class="paragraph-center">UI Designer</p>
@@ -179,7 +179,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html"><span class="accent">Wed</span>Studio</a>
+      <a href="./index.html">Wed<span class="accent-footer">Studio</span></a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
