--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
         >
         <ul>
           <li><a class="link-page" href="./index.html">Studio</a></li>
-          <li><a class="link-page" href="./index.html">Portfolio</a></li>
-          <li><a class="link-page" href="./index.html">Contacts</a></li>
+          <li><a class="link-page" href="">Portfolio</a></li>
+          <li><a class="link-page" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="address">
         <ul>
           <li class="contacts">
             <a class="link-contact" href="mailto:info@devstudio.com"
@@ -179,8 +179,10 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html">Wed<span class="accent-footer">Studio</span></a>
-      <p>
+      <a class="logo-footer" href="./index.html"
+        >Wed<span class="accent-footer">Studio</span></a
+      >
+      <p class="paragraph-footer">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
